cmake_minimum_required(VERSION 3.21)
project(leetcode_master)

set(CMAKE_CXX_STANDARD 14)

include_directories(test)

add_executable(leetcode_master
        test/yzc/0508/1.twoSum.cpp)
add_executable(leetcodeTemplate test/yzc/common/leetcodeTemplate.cpp)
add_executable(027RemoveElement test/yzc/0515/027RemoveElement.cpp)
add_executable(026RemoveDuplicates test/yzc/0515/026RemoveDuplicates.cpp)
add_executable(35.SearchInsertPosition test/yzc/0526/35.SearchInsertPosition.cpp)
add_executable(BinarySearch test/yzc/common/BinarySearch.cpp)
add_executable(53.MaximumSubarray test/yzc/0526/53.MaximumSubarray.cpp)
add_executable(509.FibonacciNumber test/yzc/0601/509.FibonacciNumber.cpp)
add_executable(66.PlusOne test/yzc/0601/66.PlusOne.cpp)
add_executable(88.MergeSortedArray test/yzc/0601/88.MergeSortedArray.cpp)
add_executable(735.AsteroidCollision test/yzc/0601/735.AsteroidCollision.cpp)
add_executable(20.ValidParentheses test/yzc/0605/20.ValidParentheses.cpp)
add_executable(136.SingleNumber test/yzc/0605/136.SingleNumber.cpp)
add_executable(137.SingleNumberII test/yzc/0605/137.SingleNumberII.cpp)
add_executable(118.Pascals-triangle test/yzc/0612/118.Pascals-triangle.cpp)
add_executable(118.Pascals-triangle-II test/yzc/0612/119.Pascals-triangle-II.cpp)
add_executable(169.MajorityElement test/yzc/0619/169.MajorityElement.cpp)
add_executable(217.ContainsDuplicate test/yzc/0619/217.ContainsDuplicate.cpp)
add_executable(228.SummaryRanges test/yzc/0619/228.SummaryRanges.cpp)
add_executable(QuickSort test/yzc/common/QuickSort.cpp)
add_executable(219.ContainsDuplicateII test/yzc/0619/219.ContainsDuplicateII.cpp)
add_executable(414.ThirdMaximumNumber test/yzc/0710/414.ThirdMaximumNumber.cpp)
add_executable(448.FindAllNumbersDisappearedInAnArray test/yzc/0710/448.FindAllNumbersDisappearedInAnArray.cpp)
add_executable(495.TeemoAttacking test/yzc/0710/495.TeemoAttacking.cpp)
add_executable(485.MaxConsecutiveOnes test/yzc/0710/485.MaxConsecutiveOnes.cpp)